BXC-4627 updating manifest service